parser.out
Grammar:

Rule 0     S' -> translation_unit
Rule 1     literal -> FLOAT
Rule 2     literal -> INTEGER
Rule 3     primary_expr -> ( expr )
Rule 4     primary_expr -> literal
Rule 5     primary_expr -> IDENTIFIER
Rule 6     postfix_expr -> postfix_expr DEC
Rule 7     postfix_expr -> postfix_expr INC
Rule 8     postfix_expr -> postfix_expr . IDENTIFIER
Rule 9     postfix_expr -> postfix_expr ( arg_expr_list )
Rule 10    postfix_expr -> postfix_expr ( )
Rule 11    postfix_expr -> postfix_expr [ expr ]
Rule 12    postfix_expr -> primary_expr
Rule 13    arg_expr_list -> arg_expr_list , expr
Rule 14    arg_expr_list -> expr
Rule 15    unary_expr -> ! cast_expr
Rule 16    unary_expr -> - cast_expr
Rule 17    unary_expr -> + cast_expr
Rule 18    unary_expr -> DEC unary_expr
Rule 19    unary_expr -> INC unary_expr
Rule 20    unary_expr -> postfix_expr
Rule 21    cast_expr -> unary_expr
Rule 22    cast_expr -> ( type ) cast_expr
Rule 23    mult_expr -> mult_expr % cast_expr
Rule 24    mult_expr -> mult_expr / cast_expr
Rule 25    mult_expr -> mult_expr * cast_expr
Rule 26    mult_expr -> cast_expr
Rule 27    add_expr -> add_expr - mult_expr
Rule 28    add_expr -> add_expr + mult_expr
Rule 29    add_expr -> mult_expr
Rule 30    rel_expr -> rel_expr LE add_expr
Rule 31    rel_expr -> rel_expr GE add_expr
Rule 32    rel_expr -> rel_expr < add_expr
Rule 33    rel_expr -> rel_expr > add_expr
Rule 34    rel_expr -> add_expr
Rule 35    eq_expr -> eq_expr NE rel_expr
Rule 36    eq_expr -> eq_expr EQ rel_expr
Rule 37    eq_expr -> rel_expr
Rule 38    and_expr -> and_expr AND eq_expr
Rule 39    and_expr -> eq_expr
Rule 40    cond_expr -> cond_expr OR and_expr
Rule 41    cond_expr -> and_expr
Rule 42    expr -> unary_expr assignment_op expr
Rule 43    expr -> cond_expr
Rule 44    assignment_op -> =
Rule 45    assignment_op -> MODEQ
Rule 46    assignment_op -> DIVEQ
Rule 47    assignment_op -> MULEQ
Rule 48    assignment_op -> MINUSEQ
Rule 49    assignment_op -> PLUSEQ
Rule 50    decl -> type init_declarator ;
Rule 51    init_declarator -> declarator = initializer
Rule 52    init_declarator -> declarator
Rule 53    type -> VOID
Rule 54    type -> STRING_T
Rule 55    type -> DOUBLE
Rule 56    type -> INT
Rule 57    declarator -> declarator [ ]
Rule 58    declarator -> declarator [ literal ]
Rule 59    declarator -> declarator ( )
Rule 60    declarator -> declarator ( param_list )
Rule 61    declarator -> IDENTIFIER
Rule 62    param_list -> param_list , param_decl
Rule 63    param_list -> param_decl
Rule 64    param_decl -> type declarator
Rule 65    initializer -> { initializer_list }
Rule 66    initializer -> expr
Rule 67    initializer_list -> initializer_list , initializer
Rule 68    initializer_list -> initializer
Rule 69    stmt -> jump_stmt
Rule 70    stmt -> loop_stmt
Rule 71    stmt -> if_stmt
Rule 72    stmt -> expr_stmt
Rule 73    stmt -> block_stmt
Rule 74    stmt -> labeled_stmt
Rule 75    labeled_stmt -> IDENTIFIER : stmt
Rule 76    block_stmt -> { stmt_list }
Rule 77    block_stmt -> { }
Rule 78    stmt_list -> stmt_list stmt
Rule 79    stmt_list -> stmt
Rule 80    expr_stmt -> decl
Rule 81    expr_stmt -> expr ;
Rule 82    expr_stmt -> ;
Rule 83    if_stmt -> IF ( expr ) stmt ELSE stmt
Rule 84    if_stmt -> IF ( expr ) stmt
Rule 85    loop_stmt -> FOR ( expr_stmt expr_stmt expr ) stmt
Rule 86    loop_stmt -> DO stmt WHILE ( expr ) ;
Rule 87    loop_stmt -> WHILE ( expr ) stmt
Rule 88    jump_stmt -> RETURN expr ;
Rule 89    jump_stmt -> RETURN ;
Rule 90    jump_stmt -> BREAK ;
Rule 91    jump_stmt -> CONTINUE ;
Rule 92    jump_stmt -> GOTO IDENTIFIER ;
Rule 93    translation_unit -> translation_unit ext_decl
Rule 94    translation_unit -> ext_decl
Rule 95    ext_decl -> import_decl
Rule 96    ext_decl -> define_decl
Rule 97    ext_decl -> include_decl
Rule 98    ext_decl -> func_decl
Rule 99    ext_decl -> decl
Rule 100   func_decl -> type declarator block_stmt
Rule 101   include_decl -> INCLUDE STRING
Rule 102   define_decl -> DEFINE IDENTIFIER STRING
Rule 103   define_decl -> DEFINE IDENTIFIER literal
Rule 104   define_decl -> DEFINE IDENTIFIER IDENTIFIER
Rule 105   import_decl -> IMPORT IDENTIFIER INTEGER INTEGER STRING IDENTIFIER

Terminals, with rules where they appear:

!                    : 15
%                    : 23
(                    : 3 9 10 22 59 60 83 84 85 86 87
)                    : 3 9 10 22 59 60 83 84 85 86 87
*                    : 25
+                    : 17 28
,                    : 13 62 67
-                    : 16 27
.                    : 8
/                    : 24
:                    : 75
;                    : 50 81 82 86 88 89 90 91 92
<                    : 32
=                    : 44 51
>                    : 33
AND                  : 38
BREAK                : 90
CONTINUE             : 91
DEC                  : 6 18
DEFINE               : 102 103 104
DIVEQ                : 46
DO                   : 86
DOUBLE               : 55
ELSE                 : 83
EQ                   : 36
FLOAT                : 1
FOR                  : 85
GE                   : 31
GOTO                 : 92
IDENTIFIER           : 5 8 61 75 92 102 103 104 104 105 105
IF                   : 83 84
IMPORT               : 105
INC                  : 7 19
INCLUDE              : 101
INT                  : 56
INTEGER              : 2 105 105
LE                   : 30
MINUSEQ              : 48
MODEQ                : 45
MULEQ                : 47
NE                   : 35
OR                   : 40
PLUSEQ               : 49
RETURN               : 88 89
STRING               : 101 102 105
STRING_T             : 54
VOID                 : 53
WHILE                : 86 87
[                    : 11 57 58
]                    : 11 57 58
error                : 
{                    : 65 76 77
}                    : 65 76 77

Nonterminals, with rules where they appear:

add_expr             : 27 28 30 31 32 33 34
and_expr             : 38 40 41
arg_expr_list        : 9 13
assignment_op        : 42
block_stmt           : 73 100
cast_expr            : 15 16 17 22 23 24 25 26
cond_expr            : 40 43
decl                 : 80 99
declarator           : 51 52 57 58 59 60 64 100
define_decl          : 96
eq_expr              : 35 36 38 39
expr                 : 3 11 13 14 42 66 81 83 84 85 86 87 88
expr_stmt            : 72 85 85
ext_decl             : 93 94
func_decl            : 98
if_stmt              : 71
import_decl          : 95
include_decl         : 97
init_declarator      : 50
initializer          : 51 67 68
initializer_list     : 65 67
jump_stmt            : 69
labeled_stmt         : 74
literal              : 4 58 103
loop_stmt            : 70
mult_expr            : 23 24 25 27 28 29
param_decl           : 62 63
param_list           : 60 62
postfix_expr         : 6 7 8 9 10 11 20
primary_expr         : 12
rel_expr             : 30 31 32 33 35 36 37
stmt                 : 75 78 79 83 83 84 85 86 87
stmt_list            : 76 78
translation_unit     : 93 0
type                 : 22 50 64 100
unary_expr           : 18 19 21 42


state 0

    (0) S' -> . translation_unit
    (93) translation_unit -> . translation_unit ext_decl
    (94) translation_unit -> . ext_decl
    (95) ext_decl -> . import_decl
    (96) ext_decl -> . define_decl
    (97) ext_decl -> . include_decl
    (98) ext_decl -> . func_decl
    (99) ext_decl -> . decl
    (105) import_decl -> . IMPORT IDENTIFIER INTEGER INTEGER STRING IDENTIFIER
    (102) define_decl -> . DEFINE IDENTIFIER STRING
    (103) define_decl -> . DEFINE IDENTIFIER literal
    (104) define_decl -> . DEFINE IDENTIFIER IDENTIFIER
    (101) include_decl -> . INCLUDE STRING
    (100) func_decl -> . type declarator block_stmt
    (50) decl -> . type init_declarator ;
    (53) type -> . VOID
    (54) type -> . STRING_T
    (55) type -> . DOUBLE
    (56) type -> . INT
    IMPORT          shift and go to state 8
    DEFINE          shift and go to state 9
    INCLUDE         shift and go to state 10
    VOID            shift and go to state 12
    STRING_T        shift and go to state 13
    DOUBLE          shift and go to state 14
    INT             shift and go to state 15

    translation_unit               shift and go to state 1
    ext_decl                       shift and go to state 2
    import_decl                    shift and go to state 3
    define_decl                    shift and go to state 4
    include_decl                   shift and go to state 5
    func_decl                      shift and go to state 6
    decl                           shift and go to state 7
    type                           shift and go to state 11

state 1

    (0) S' -> translation_unit .
    (93) translation_unit -> translation_unit . ext_decl
    (95) ext_decl -> . import_decl
    (96) ext_decl -> . define_decl
    (97) ext_decl -> . include_decl
    (98) ext_decl -> . func_decl
    (99) ext_decl -> . decl
    (105) import_decl -> . IMPORT IDENTIFIER INTEGER INTEGER STRING IDENTIFIER
    (102) define_decl -> . DEFINE IDENTIFIER STRING
    (103) define_decl -> . DEFINE IDENTIFIER literal
    (104) define_decl -> . DEFINE IDENTIFIER IDENTIFIER
    (101) include_decl -> . INCLUDE STRING
    (100) func_decl -> . type declarator block_stmt
    (50) decl -> . type init_declarator ;
    (53) type -> . VOID
    (54) type -> . STRING_T
    (55) type -> . DOUBLE
    (56) type -> . INT
    IMPORT          shift and go to state 8
    DEFINE          shift and go to state 9
    INCLUDE         shift and go to state 10
    VOID            shift and go to state 12
    STRING_T        shift and go to state 13
    DOUBLE          shift and go to state 14
    INT             shift and go to state 15

    ext_decl                       shift and go to state 16
    import_decl                    shift and go to state 3
    define_decl                    shift and go to state 4
    include_decl                   shift and go to state 5
    func_decl                      shift and go to state 6
    decl                           shift and go to state 7
    type                           shift and go to state 11

state 2

    (94) translation_unit -> ext_decl .
    IMPORT          reduce using rule 94 (translation_unit -> ext_decl .)
    DEFINE          reduce using rule 94 (translation_unit -> ext_decl .)
    INCLUDE         reduce using rule 94 (translation_unit -> ext_decl .)
    VOID            reduce using rule 94 (translation_unit -> ext_decl .)
    STRING_T        reduce using rule 94 (translation_unit -> ext_decl .)
    DOUBLE          reduce using rule 94 (translation_unit -> ext_decl .)
    INT             reduce using rule 94 (translation_unit -> ext_decl .)
    $end            reduce using rule 94 (translation_unit -> ext_decl .)


state 3

    (95) ext_decl -> import_decl .
    IMPORT          reduce using rule 95 (ext_decl -> import_decl .)
    DEFINE          reduce using rule 95 (ext_decl -> import_decl .)
    INCLUDE         reduce using rule 95 (ext_decl -> import_decl .)
    VOID            reduce using rule 95 (ext_decl -> import_decl .)
    STRING_T        reduce using rule 95 (ext_decl -> import_decl .)
    DOUBLE          reduce using rule 95 (ext_decl -> import_decl .)
    INT             reduce using rule 95 (ext_decl -> import_decl .)
    $end            reduce using rule 95 (ext_decl -> import_decl .)


state 4

    (96) ext_decl -> define_decl .
    IMPORT          reduce using rule 96 (ext_decl -> define_decl .)
    DEFINE          reduce using rule 96 (ext_decl -> define_decl .)
    INCLUDE         reduce using rule 96 (ext_decl -> define_decl .)
    VOID            reduce using rule 96 (ext_decl -> define_decl .)
    STRING_T        reduce using rule 96 (ext_decl -> define_decl .)
    DOUBLE          reduce using rule 96 (ext_decl -> define_decl .)
    INT             reduce using rule 96 (ext_decl -> define_decl .)
    $end            reduce using rule 96 (ext_decl -> define_decl .)


state 5

    (97) ext_decl -> include_decl .
    IMPORT          reduce using rule 97 (ext_decl -> include_decl .)
    DEFINE          reduce using rule 97 (ext_decl -> include_decl .)
    INCLUDE         reduce using rule 97 (ext_decl -> include_decl .)
    VOID            reduce using rule 97 (ext_decl -> include_decl .)
    STRING_T        reduce using rule 97 (ext_decl -> include_decl .)
    DOUBLE          reduce using rule 97 (ext_decl -> include_decl .)
    INT             reduce using rule 97 (ext_decl -> include_decl .)
    $end            reduce using rule 97 (ext_decl -> include_decl .)


state 6

    (98) ext_decl -> func_decl .
    IMPORT          reduce using rule 98 (ext_decl -> func_decl .)
    DEFINE          reduce using rule 98 (ext_decl -> func_decl .)
    INCLUDE         reduce using rule 98 (ext_decl -> func_decl .)
    VOID            reduce using rule 98 (ext_decl -> func_decl .)
    STRING_T        reduce using rule 98 (ext_decl -> func_decl .)
    DOUBLE          reduce using rule 98 (ext_decl -> func_decl .)
    INT             reduce using rule 98 (ext_decl -> func_decl .)
    $end            reduce using rule 98 (ext_decl -> func_decl .)


state 7

    (99) ext_decl -> decl .
    IMPORT          reduce using rule 99 (ext_decl -> decl .)
    DEFINE          reduce using rule 99 (ext_decl -> decl .)
    INCLUDE         reduce using rule 99 (ext_decl -> decl .)
    VOID            reduce using rule 99 (ext_decl -> decl .)
    STRING_T        reduce using rule 99 (ext_decl -> decl .)
    DOUBLE          reduce using rule 99 (ext_decl -> decl .)
    INT             reduce using rule 99 (ext_decl -> decl .)
    $end            reduce using rule 99 (ext_decl -> decl .)


state 8

    (105) import_decl -> IMPORT . IDENTIFIER INTEGER INTEGER STRING IDENTIFIER
    IDENTIFIER      shift and go to state 17


state 9

    (102) define_decl -> DEFINE . IDENTIFIER STRING
    (103) define_decl -> DEFINE . IDENTIFIER literal
    (104) define_decl -> DEFINE . IDENTIFIER IDENTIFIER
    IDENTIFIER      shift and go to state 18


state 10

    (101) include_decl -> INCLUDE . STRING
    STRING          shift and go to state 19


state 11

    (100) func_decl -> type . declarator block_stmt
    (50) decl -> type . init_declarator ;
    (57) declarator -> . declarator [ ]
    (58) declarator -> . declarator [ literal ]
    (59) declarator -> . declarator ( )
    (60) declarator -> . declarator ( param_list )
    (61) declarator -> . IDENTIFIER
    (51) init_declarator -> . declarator = initializer
    (52) init_declarator -> . declarator
    IDENTIFIER      shift and go to state 22

    declarator                     shift and go to state 20
    init_declarator                shift and go to state 21

state 12

    (53) type -> VOID .
    IDENTIFIER      reduce using rule 53 (type -> VOID .)
    )               reduce using rule 53 (type -> VOID .)


state 13

    (54) type -> STRING_T .
    IDENTIFIER      reduce using rule 54 (type -> STRING_T .)
    )               reduce using rule 54 (type -> STRING_T .)


state 14

    (55) type -> DOUBLE .
    IDENTIFIER      reduce using rule 55 (type -> DOUBLE .)
    )               reduce using rule 55 (type -> DOUBLE .)


state 15

    (56) type -> INT .
    IDENTIFIER      reduce using rule 56 (type -> INT .)
    )               reduce using rule 56 (type -> INT .)


state 16

    (93) translation_unit -> translation_unit ext_decl .
    IMPORT          reduce using rule 93 (translation_unit -> translation_unit ext_decl .)
    DEFINE          reduce using rule 93 (translation_unit -> translation_unit ext_decl .)
    INCLUDE         reduce using rule 93 (translation_unit -> translation_unit ext_decl .)
    VOID            reduce using rule 93 (translation_unit -> translation_unit ext_decl .)
    STRING_T        reduce using rule 93 (translation_unit -> translation_unit ext_decl .)
    DOUBLE          reduce using rule 93 (translation_unit -> translation_unit ext_decl .)
    INT             reduce using rule 93 (translation_unit -> translation_unit ext_decl .)
    $end            reduce using rule 93 (translation_unit -> translation_unit ext_decl .)


state 17

    (105) import_decl -> IMPORT IDENTIFIER . INTEGER INTEGER STRING IDENTIFIER
    INTEGER         shift and go to state 23


state 18

    (102) define_decl -> DEFINE IDENTIFIER . STRING
    (103) define_decl -> DEFINE IDENTIFIER . literal
    (104) define_decl -> DEFINE IDENTIFIER . IDENTIFIER
    (1) literal -> . FLOAT
    (2) literal -> . INTEGER
    STRING          shift and go to state 25
    IDENTIFIER      shift and go to state 24
    FLOAT           shift and go to state 27
    INTEGER         shift and go to state 28

    literal                        shift and go to state 26

state 19

    (101) include_decl -> INCLUDE STRING .
    IMPORT          reduce using rule 101 (include_decl -> INCLUDE STRING .)
    DEFINE          reduce using rule 101 (include_decl -> INCLUDE STRING .)
    INCLUDE         reduce using rule 101 (include_decl -> INCLUDE STRING .)
    VOID            reduce using rule 101 (include_decl -> INCLUDE STRING .)
    STRING_T        reduce using rule 101 (include_decl -> INCLUDE STRING .)
    DOUBLE          reduce using rule 101 (include_decl -> INCLUDE STRING .)
    INT             reduce using rule 101 (include_decl -> INCLUDE STRING .)
    $end            reduce using rule 101 (include_decl -> INCLUDE STRING .)


state 20

    (100) func_decl -> type declarator . block_stmt
    (57) declarator -> declarator . [ ]
    (58) declarator -> declarator . [ literal ]
    (59) declarator -> declarator . ( )
    (60) declarator -> declarator . ( param_list )
    (51) init_declarator -> declarator . = initializer
    (52) init_declarator -> declarator .
    (76) block_stmt -> . { stmt_list }
    (77) block_stmt -> . { }
    [               shift and go to state 30
    (               shift and go to state 31
    =               shift and go to state 32
    ;               reduce using rule 52 (init_declarator -> declarator .)
    {               shift and go to state 33

    block_stmt                     shift and go to state 29

state 21

    (50) decl -> type init_declarator . ;
    ;               shift and go to state 34


state 22

    (61) declarator -> IDENTIFIER .
    [               reduce using rule 61 (declarator -> IDENTIFIER .)
    (               reduce using rule 61 (declarator -> IDENTIFIER .)
    =               reduce using rule 61 (declarator -> IDENTIFIER .)
    {               reduce using rule 61 (declarator -> IDENTIFIER .)
    ;               reduce using rule 61 (declarator -> IDENTIFIER .)
    )               reduce using rule 61 (declarator -> IDENTIFIER .)
    ,               reduce using rule 61 (declarator -> IDENTIFIER .)


state 23

    (105) import_decl -> IMPORT IDENTIFIER INTEGER . INTEGER STRING IDENTIFIER
    INTEGER         shift and go to state 35


state 24

    (104) define_decl -> DEFINE IDENTIFIER IDENTIFIER .
    IMPORT          reduce using rule 104 (define_decl -> DEFINE IDENTIFIER IDENTIFIER .)
    DEFINE          reduce using rule 104 (define_decl -> DEFINE IDENTIFIER IDENTIFIER .)
    INCLUDE         reduce using rule 104 (define_decl -> DEFINE IDENTIFIER IDENTIFIER .)
    VOID            reduce using rule 104 (define_decl -> DEFINE IDENTIFIER IDENTIFIER .)
    STRING_T        reduce using rule 104 (define_decl -> DEFINE IDENTIFIER IDENTIFIER .)
    DOUBLE          reduce using rule 104 (define_decl -> DEFINE IDENTIFIER IDENTIFIER .)
    INT             reduce using rule 104 (define_decl -> DEFINE IDENTIFIER IDENTIFIER .)
    $end            reduce using rule 104 (define_decl -> DEFINE IDENTIFIER IDENTIFIER .)


state 25

    (102) define_decl -> DEFINE IDENTIFIER STRING .
    IMPORT          reduce using rule 102 (define_decl -> DEFINE IDENTIFIER STRING .)
    DEFINE          reduce using rule 102 (define_decl -> DEFINE IDENTIFIER STRING .)
    INCLUDE         reduce using rule 102 (define_decl -> DEFINE IDENTIFIER STRING .)
    VOID            reduce using rule 102 (define_decl -> DEFINE IDENTIFIER STRING .)
    STRING_T        reduce using rule 102 (define_decl -> DEFINE IDENTIFIER STRING .)
    DOUBLE          reduce using rule 102 (define_decl -> DEFINE IDENTIFIER STRING .)
    INT             reduce using rule 102 (define_decl -> DEFINE IDENTIFIER STRING .)
    $end            reduce using rule 102 (define_decl -> DEFINE IDENTIFIER STRING .)


state 26

    (103) define_decl -> DEFINE IDENTIFIER literal .
    IMPORT          reduce using rule 103 (define_decl -> DEFINE IDENTIFIER literal .)
    DEFINE          reduce using rule 103 (define_decl -> DEFINE IDENTIFIER literal .)
    INCLUDE         reduce using rule 103 (define_decl -> DEFINE IDENTIFIER literal .)
    VOID            reduce using rule 103 (define_decl -> DEFINE IDENTIFIER literal .)
    STRING_T        reduce using rule 103 (define_decl -> DEFINE IDENTIFIER literal .)
    DOUBLE          reduce using rule 103 (define_decl -> DEFINE IDENTIFIER literal .)
    INT             reduce using rule 103 (define_decl -> DEFINE IDENTIFIER literal .)
    $end            reduce using rule 103 (define_decl -> DEFINE IDENTIFIER literal .)


state 27

    (1) literal -> FLOAT .
    IMPORT          reduce using rule 1 (literal -> FLOAT .)
    DEFINE          reduce using rule 1 (literal -> FLOAT .)
    INCLUDE         reduce using rule 1 (literal -> FLOAT .)
    VOID            reduce using rule 1 (literal -> FLOAT .)
    STRING_T        reduce using rule 1 (literal -> FLOAT .)
    DOUBLE          reduce using rule 1 (literal -> FLOAT .)
    INT             reduce using rule 1 (literal -> FLOAT .)
    $end            reduce using rule 1 (literal -> FLOAT .)
    ]               reduce using rule 1 (literal -> FLOAT .)
    DEC             reduce using rule 1 (literal -> FLOAT .)
    INC             reduce using rule 1 (literal -> FLOAT .)
    .               reduce using rule 1 (literal -> FLOAT .)
    (               reduce using rule 1 (literal -> FLOAT .)
    [               reduce using rule 1 (literal -> FLOAT .)
    =               reduce using rule 1 (literal -> FLOAT .)
    MODEQ           reduce using rule 1 (literal -> FLOAT .)
    DIVEQ           reduce using rule 1 (literal -> FLOAT .)
    MULEQ           reduce using rule 1 (literal -> FLOAT .)
    MINUSEQ         reduce using rule 1 (literal -> FLOAT .)
    PLUSEQ          reduce using rule 1 (literal -> FLOAT .)
    %               reduce using rule 1 (literal -> FLOAT .)
    /               reduce using rule 1 (literal -> FLOAT .)
    *               reduce using rule 1 (literal -> FLOAT .)
    -               reduce using rule 1 (literal -> FLOAT .)
    +               reduce using rule 1 (literal -> FLOAT .)
    LE              reduce using rule 1 (literal -> FLOAT .)
    GE              reduce using rule 1 (literal -> FLOAT .)
    <               reduce using rule 1 (literal -> FLOAT .)
    >               reduce using rule 1 (literal -> FLOAT .)
    NE              reduce using rule 1 (literal -> FLOAT .)
    EQ              reduce using rule 1 (literal -> FLOAT .)
    AND             reduce using rule 1 (literal -> FLOAT .)
    OR              reduce using rule 1 (literal -> FLOAT .)
    ;               reduce using rule 1 (literal -> FLOAT .)
    }               reduce using rule 1 (literal -> FLOAT .)
    ,               reduce using rule 1 (literal -> FLOAT .)
    )               reduce using rule 1 (literal -> FLOAT .)


state 28

    (2) literal -> INTEGER .
    IMPORT          reduce using rule 2 (literal -> INTEGER .)
    DEFINE          reduce using rule 2 (literal -> INTEGER .)
    INCLUDE         reduce using rule 2 (literal -> INTEGER .)
    VOID            reduce using rule 2 (literal -> INTEGER .)
    STRING_T        reduce using rule 2 (literal -> INTEGER .)
    DOUBLE          reduce using rule 2 (literal -> INTEGER .)
    INT             reduce using rule 2 (literal -> INTEGER .)
    $end            reduce using rule 2 (literal -> INTEGER .)
    ]               reduce using rule 2 (literal -> INTEGER .)
    DEC             reduce using rule 2 (literal -> INTEGER .)
    INC             reduce using rule 2 (literal -> INTEGER .)
    .               reduce using rule 2 (literal -> INTEGER .)
    (               reduce using rule 2 (literal -> INTEGER .)
    [               reduce using rule 2 (literal -> INTEGER .)
    =               reduce using rule 2 (literal -> INTEGER .)
    MODEQ           reduce using rule 2 (literal -> INTEGER .)
    DIVEQ           reduce using rule 2 (literal -> INTEGER .)
    MULEQ           reduce using rule 2 (literal -> INTEGER .)
    MINUSEQ         reduce using rule 2 (literal -> INTEGER .)
    PLUSEQ          reduce using rule 2 (literal -> INTEGER .)
    %               reduce using rule 2 (literal -> INTEGER .)
    /               reduce using rule 2 (literal -> INTEGER .)
    *               reduce using rule 2 (literal -> INTEGER .)
    -               reduce using rule 2 (literal -> INTEGER .)
    +               reduce using rule 2 (literal -> INTEGER .)
    LE              reduce using rule 2 (literal -> INTEGER .)
    GE              reduce using rule 2 (literal -> INTEGER .)
    <               reduce using rule 2 (literal -> INTEGER .)
    >               reduce using rule 2 (literal -> INTEGER .)
    NE              reduce using rule 2 (literal -> INTEGER .)
    EQ              reduce using rule 2 (literal -> INTEGER .)
    AND             reduce using rule 2 (literal -> INTEGER .)
    OR              reduce using rule 2 (literal -> INTEGER .)
    ;               reduce using rule 2 (literal -> INTEGER .)
    }               reduce using rule 2 (literal -> INTEGER .)
    ,               reduce using rule 2 (literal -> INTEGER .)
    )               reduce using rule 2 (literal -> INTEGER .)


state 29

    (100) func_decl -> type declarator block_stmt .
    IMPORT          reduce using rule 100 (func_decl -> type declarator block_stmt .)
    DEFINE          reduce using rule 100 (func_decl -> type declarator block_stmt .)
    INCLUDE         reduce using rule 100 (func_decl -> type declarator block_stmt .)
    VOID            reduce using rule 100 (func_decl -> type declarator block_stmt .)
    STRING_T        reduce using rule 100 (func_decl -> type declarator block_stmt .)
    DOUBLE          reduce using rule 100 (func_decl -> type declarator block_stmt .)
    INT             reduce using rule 100 (func_decl -> type declarator block_stmt .)
    $end            reduce using rule 100 (func_decl -> type declarator block_stmt .)


state 30

    (57) declarator -> declarator [ . ]
    (58) declarator -> declarator [ . literal ]
    (1) literal -> . FLOAT
    (2) literal -> . INTEGER
    ]               shift and go to state 36
    FLOAT           shift and go to state 27
    INTEGER         shift and go to state 28

    literal                        shift and go to state 37

state 31

    (59) declarator -> declarator ( . )
    (60) declarator -> declarator ( . param_list )
    (62) param_list -> . param_list , param_decl
    (63) param_list -> . param_decl
    (64) param_decl -> . type declarator
    (53) type -> . VOID
    (54) type -> . STRING_T
    (55) type -> . DOUBLE
    (56) type -> . INT
    )               shift and go to state 38
    VOID            shift and go to state 12
    STRING_T        shift and go to state 13
    DOUBLE          shift and go to state 14
    INT             shift and go to state 15

    param_list                     shift and go to state 39
    param_decl                     shift and go to state 40
    type                           shift and go to state 41

state 32

    (51) init_declarator -> declarator = . initializer
    (65) initializer -> . { initializer_list }
    (66) initializer -> . expr
    (42) expr -> . unary_expr assignment_op expr
    (43) expr -> . cond_expr
    (15) unary_expr -> . ! cast_expr
    (16) unary_expr -> . - cast_expr
    (17) unary_expr -> . + cast_expr
    (18) unary_expr -> . DEC unary_expr
    (19) unary_expr -> . INC unary_expr
    (20) unary_expr -> . postfix_expr
    (40) cond_expr -> . cond_expr OR and_expr
    (41) cond_expr -> . and_expr
    (6) postfix_expr -> . postfix_expr DEC
    (7) postfix_expr -> . postfix_expr INC
    (8) postfix_expr -> . postfix_expr . IDENTIFIER
    (9) postfix_expr -> . postfix_expr ( arg_expr_list )
    (10) postfix_expr -> . postfix_expr ( )
    (11) postfix_expr -> . postfix_expr [ expr ]
    (12) postfix_expr -> . primary_expr
    (38) and_expr -> . and_expr AND eq_expr
    (39) and_expr -> . eq_expr
    (3) primary_expr -> . ( expr )
    (4) primary_expr -> . literal
    (5) primary_expr -> . IDENTIFIER
    (35) eq_expr -> . eq_expr NE rel_expr
    (36) eq_expr -> . eq_expr EQ rel_expr
    (37) eq_expr -> . rel_expr
    (1) literal -> . FLOAT
    (2) literal -> . INTEGER
    (30) rel_expr -> . rel_expr LE add_expr
    (31) rel_expr -> . rel_expr GE add_expr
    (32) rel_expr -> . rel_expr < add_expr
    (33) rel_expr -> . rel_expr > add_expr
    (34) rel_expr -> . add_expr
    (27) add_expr -> . add_expr - mult_expr
    (28) add_expr -> . add_expr + mult_expr
    (29) add_expr -> . mult_expr
    (23) mult_expr -> . mult_expr % cast_expr
    (24) mult_expr -> . mult_expr / cast_expr
    (25) mult_expr -> . mult_expr * cast_expr
    (26) mult_expr -> . cast_expr
    (21) cast_expr -> . unary_expr
    (22) cast_expr -> . ( type ) cast_expr
    {               shift and go to state 43
    !               shift and go to state 47
    -               shift and go to state 49
    +               shift and go to state 50
    DEC             shift and go to state 51
    INC             shift and go to state 52
    (               shift and go to state 56
    IDENTIFIER      shift and go to state 55
    FLOAT           shift and go to state 27
    INTEGER         shift and go to state 28

    initializer                    shift and go to state 42
    expr                           shift and go to state 44
    unary_expr                     shift and go to state 45
    cond_expr                      shift and go to state 46
    cast_expr                      shift and go to state 48
    postfix_expr                   shift and go to state 53
    and_expr                       shift and go to state 54
    primary_expr                   shift and go to state 57
    eq_expr                        shift and go to state 58
    literal                        shift and go to state 59
    rel_expr                       shift and go to state 60
    add_expr                       shift and go to state 61
    mult_expr                      shift and go to state 62

state 33
